--- a/Port.html
+++ b/Port.html
@@ -6,12 +6,14 @@
 </head>
 <body>
 <h1>Lehakoe Makgoane</h1>
-<ul id="Intrests" >Intrests
-<li ></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
+<h2>Intrests</h2>
+<ul id="Intrests">
+<li>Music</li>
+<li>Gaming</li>
+<li>Art</li>
+<li>Photography</li>
+<li>Food</li>
+<li>Technology</li>
 </ul>
 <footer><a href="lehakoe.lee@gmail.com
 "><img src="http://icons.iconarchive.com/icons/cornmanthe3rd/plex/128/Communication-gmail-icon.png" style="width: 50px;"></a>
