--- a/Port.html
+++ b/Port.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>Lehakoe Makgoane</title>
-	<link rel="stylesheet" type="text/css" href="Css/Port.css">
+	<link rel="stylesheet" type="text/css" href="Port.css">
+	<!-- <link rel="stylesheet" type="text/css" href=""> -->
 </head>
 <body>
 <h1>Lehakoe Makgoane</h1>
