--- a/Port.html
+++ b/Port.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<title>Lehakoe Makgoane</title>
-	<link rel="stylesheet" type="text/css" href="Port.css">
-	<!-- <link rel="stylesheet" type="text/css" href=""> -->
+	<link rel="stylesheet" type="text/css" href="Css/Portf.css">
+	
 </head>
 <body>
-<h1>Lehakoe Makgoane</h1>
+<h1 id="name">Lehakoe Makgoane</h1>
 <h2>Intrests</h2>
-<ul id="Intrests">
+<ul class="Intrests">
 <li>Music</li>
 <li>Gaming</li>
 <li>Art</li>
