--- a/Port.html
+++ b/Port.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<title>Lehakoe Makgoane</title>
-	<link rel="stylesheet" type="text/css" href="Css/Portf.css">
+	<!-- <link rel="stylesheet" type="text/css" href="Portf.css"> -->
 	
 </head>
 <body>
 <h1 id="name">Lehakoe Makgoane</h1>
 <h2>Intrests</h2>
-<ul class="Intrests">
+<ul>
 <li>Music</li>
 <li>Gaming</li>
 <li>Art</li>
