--- a/Bio.html
+++ b/Bio.html
@@ -5,6 +5,6 @@
 	<link rel="stylesheet" type="text/css" href="Css/Bio.css">
 </head>
 <body>
-
+<h1 id="name">Lehakoe Makgoane</h1>
 </body>
 </html>
