--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
 <h1 id="logo">Lehakoe Makgoane</h1>
 <p id="brief">Junior Web developer & Programmer</p>
-<a href="Bio.html"><button class="horizontal-flip-hover" data-back="Portfolio" data-front="➕"></button></a>
+<a href="Bio.html"><button class="horizontal-flip-hover" data-back="Bio" data-front="➕"></button></a>
 </body>
 </html>
