--- a/Bio.html
+++ b/Bio.html
@@ -6,5 +6,14 @@
 </head>
 <body>
 <h1 id="name">Lehakoe Makgoane</h1>
+<p>Interests</p>
+<ul class="Interests">
+	<li>Music</li>
+	<li>Gaming</li>
+	<li>Movies</li>
+	<li>Gadgets</li>
+	<li>Technology</li>
+	<li>Photography</li>
+</ul>
 </body>
 </html>
