--- a/Bio.html
+++ b/Bio.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1 id="name">Lehakoe Makgoane</h1>
-<p>Interests</p>
+<p id="ul" >Interests</p>
 <ul class="Interests">
 	<li>Music</li>
 	<li>Gaming</li>
@@ -14,6 +14,7 @@
 	<li>Gadgets</li>
 	<li>Technology</li>
 	<li>Photography</li>
+	<li>Art</li>
 </ul>
 </body>
 </html>
