--- a/Bio.html
+++ b/Bio.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1 id="name">Lehakoe Makgoane</h1>
-<p id="ul" >Interests</p>
-<ul class="Interests">
+<p id="Interests">Interests</p>
+<ul class="list">
 	<li>Music</li>
 	<li>Gaming</li>
 	<li>Movies</li>
