--- a/Bio.html
+++ b/Bio.html
@@ -16,5 +16,16 @@
 	<li>Photography</li>
 	<li>Art</li>
 </ul>
+
+<p id="Skills">Tech Skills</p>
+<ul class="Tech">
+	<li>HTML</li>
+	<li>Css</li>
+	<li>jQuery</li>
+	<li>Wordpress</li>
+	<li>Git</li>
+	<li>GITHB</li>
+	<li>Ionic</li>
+</ul>
 </body>
 </html>
