--- a/Bio.html
+++ b/Bio.html
@@ -27,5 +27,17 @@
 	<li>GITHB</li>
 	<li>Ionic</li>
 </ul>
+<p id="EDU">Education</p>
+<ul class="Learn">
+	<li>Quirky 30</li>
+	<li>HTML,CSS,WORDPRESS,GIT</li><li>GITHUB,IONIC,jQuery</li>
+	<li>Still Attending</li>
+	<!-- <li>Css</li>
+	<li>jQuery</li>
+	<li>Wordpress</li>
+	<li>Git</li>
+	<li>GITHB</li>
+	<li>Ionic</li> -->
+</ul>
 </body>
 </html>
