--- a/Bio.html
+++ b/Bio.html
@@ -37,17 +37,20 @@
 <ul class="JSS">
 	<li><b>Kwa Ntsikana Junior Senior Secondary</b></li>
 	<li>2014-2015</li>
-	<li></li>
+	<li>Grade 8- Grade 8</li>
+	<li>Math.A&C,EMS,NS,SS</li>
 </ul>
 <ul class="MMP">
 	<li><b>Mbuyisa Makhubu Primary School</b></li>
 	<li>2013-2014</li>
-	<li></li>
+	<li>Grade 7- Grade 8</li>
+	<li>Math.A&C,EMS,NS,SS</li>
 </ul>
 <ul class="SDA">
 	<li><b>Seventh Day Adventist</b></li>
 	<li>2007-2013</li>
-	<li></li>
+	<li>Grade 1- Grade 7</li>
+	<li>Math.A&C,EMS,NS,SS</li>
 </ul>
 </body>
 </html>
