--- a/Bio.html
+++ b/Bio.html
@@ -52,11 +52,17 @@
 	<li>Grade 1- Grade 7</li>
 	<li>Math.A&C,EMS,NS,SS</li>
 </ul>
+<ul class="Lingo">
+	<li><b>Language</b></li>
+	<li>Sesotho</li>
+	<li>Zulu</li>
+	<li>English</li>
+</ul>
 <footer>
 	<a href="" target="blank"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-256.png" width="50"></a>
 	<a href="" target="blank"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" width="50"></a>
 	<a href="" target="blank"><img src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png" width="50"></a>
-	<a href="" target="blank"><img src="" width="50"></a>
+	<a href="" target="blank"><img src="https://cdn2.iconfinder.com/data/icons/social-icons-33/128/Instagram-128.png" width="50"></a>
 	<a href="" target="blank"><img src="" width="50"></a>
 	<a href="" target="blank"><img src="" width="50"></a>
 	<a href="" target="blank"><img src="" width="50"></a>
