--- a/Bio.html
+++ b/Bio.html
@@ -59,13 +59,13 @@
 	<li>English</li>
 </ul>
 <footer class="foot">
-	<a href="" target="blank"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-256.png" width="50"></a>
+	<a href="https://www.facebook.com/Lehakoe.xolelwa" target="blank"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-256.png" width="50"></a>
 	<a href="" target="blank"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" width="50"></a>
-	<a href="" target="blank"><img src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png" width="50"></a>
-	<a href="" target="blank"><img src="https://cdn2.iconfinder.com/data/icons/social-icons-33/128/Instagram-128.png" width="50"></a>
-	<a href="" target="blank"><img src="https://vignette4.wikia.nocookie.net/phoebe-and-her-unicorn/images/1/11/Twitter_bird_icon.png/revision/latest?cb=20150530044104" width="50"></a>
+	<a href="https://github.com/Leehakoe" target="blank"><img src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png" width="50"></a>
+	<a href="https://www.instagram.com/rel_leehakoe/" target="blank"><img src="https://cdn2.iconfinder.com/data/icons/social-icons-33/128/Instagram-128.png" width="50"></a>
+	<a href="https://twitter.com/Rel_lehakoe" target="blank"><img src="https://vignette4.wikia.nocookie.net/phoebe-and-her-unicorn/images/1/11/Twitter_bird_icon.png/revision/latest?cb=20150530044104" width="50"></a>
 	<a href="" target="blank"><img src="https://christianoliff.com/img/icons/googleplus.svg" width="50"></a>
-	<a href="" target="blank"><img src="http://files.softicons.com/download/social-media-icons/free-social-media-icons-by-uiconstock/png/512x512/Linkedin-Icon.png" width="50"></a>
+	<a href="https://www.linkedin.com/in/lehakoe-m-241112124/" target="blank"><img src="http://files.softicons.com/download/social-media-icons/free-social-media-icons-by-uiconstock/png/512x512/Linkedin-Icon.png" width="50"></a>
 	<a href="" target="blank"><img src="" width="50"></a>
 </footer>
 </body>
