--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Lehakoe Makgoane</title>
 	<link rel="stylesheet" type="text/css" href="Css/index.css">
 </head>
