--- a/Bio.html
+++ b/Bio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+c<!DOCTYPE html>
 <html>
 <head>
 	<title>Lehakoe Makgoane</title>
@@ -29,6 +29,7 @@
 	<li>GITHB</li>
 	<li>Ionic</li>
 </ul>
+<h2>Summary</h2>
 <p id="EDU">Education</p>
 <ul class="SDA">
 	<li><b>Seventh Day Adventist</b></li>
@@ -66,8 +67,7 @@
 	<a href="https://www.instagram.com/rel_leehakoe/" target="blank"><img src="https://cdn2.iconfinder.com/data/icons/social-icons-33/128/Instagram-128.png" width="50"></a>
 	<a href="https://twitter.com/Rel_lehakoe" target="blank"><img src="https://vignette4.wikia.nocookie.net/phoebe-and-her-unicorn/images/1/11/Twitter_bird_icon.png/revision/latest?cb=20150530044104" width="50"></a>
 	<a href="https://plus.google.com/114671614329250959694" target="blank"><img src="https://christianoliff.com/img/icons/googleplus.svg" width="50"></a>
-	<a href="https://www.linkedin.com/in/lehakoe-m-241112124/" target="blank"><img src="http://files.softicons.com/download/social-media-icons/free-social-media-icons-by-uiconstock/png/512x512/Linkedin-Icon.png" width="50"></a>
-	<a href="" target="blank"><img src="" width="50"></a>
+	<a href="https://www.linkedin.com/in/lehakoe-Makgoane" target="blank"><img src="http://files.softicons.com/download/social-media-icons/free-social-media-icons-by-uiconstock/png/512x512/Linkedin-Icon.png" width="50"></a>
 </footer>
 </body>
 </html>
