--- a/Bio.html
+++ b/Bio.html
@@ -1,4 +1,4 @@
-c<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Lehakoe Makgoane</title>
@@ -29,8 +29,8 @@ c<!DOCTYPE html>
 	<li>GITHB</li>
 	<li>Ionic</li>
 </ul>
-<h2>Summary</h2>
-<p id="EDU">Education</p>
+<h2 id="about_me">Summary</h2>
+<!-- <p id="EDU">Education</p>
 <ul class="SDA">
 	<li><b>Seventh Day Adventist</b></li>
 	<li>2007-2013</li>
@@ -59,7 +59,7 @@ c<!DOCTYPE html>
 	<li>Sesotho</li>
 	<li>Zulu</li>
 	<li>English</li>
-</ul>
+</ul> -->
 <footer class="foot">
 	<a href="https://www.facebook.com/Lehakoe.xolelwa" target="blank"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-256.png" width="50"></a>
 	<a href="mailto:lehakoe.lee@gmail.com" target="blank"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" width="50"></a>
