--- a/Bio.html
+++ b/Bio.html
@@ -30,7 +30,10 @@
 	<li>Ionic</li>
 </ul>
 <h2 id="about_me">Summary</h2>
-<!-- <p id="EDU">Education</p>
+<p>I'm a person who love with Technology,Music,Art programing has been a dream of mine since i was a kid
+im not in to the machine side of thec but anytimg concerning writing code and working on the terminal im
+for it.</p>
+<p id="EDU">Education</p>
 <ul class="SDA">
 	<li><b>Seventh Day Adventist</b></li>
 	<li>2007-2013</li>
@@ -59,7 +62,7 @@
 	<li>Sesotho</li>
 	<li>Zulu</li>
 	<li>English</li>
-</ul> -->
+</ul>
 <footer class="foot">
 	<a href="https://www.facebook.com/Lehakoe.xolelwa" target="blank"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-256.png" width="50"></a>
 	<a href="mailto:lehakoe.lee@gmail.com" target="blank"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" width="50"></a>
