--- a/Bio.html
+++ b/Bio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1 id="name">Lehakoe Makgoane</h1>
-<p id="Interests">Interests</p>
+<h2 id="Interests">Interests</h2>
 <ul class="list">
 	<li>Music</li>
 	<li>Gaming</li>
@@ -19,7 +19,7 @@
 	<li>Art</li>
 </ul>
 
-<p id="Skills">Tech Skills</p>
+<h2 id="Skills">Tech Skills</h2>
 <ul class="Tech">
 	<li>HTML</li>
 	<li>Css</li>
