--- a/Bio.html
+++ b/Bio.html
@@ -30,9 +30,9 @@
 	<li>Ionic</li>
 </ul>
 <h2 id="about_me">Summary</h2>
-<p>I'm a person who love with Technology,Music,Art programing has been a dream of mine since i was a kid
-im not in to the machine side of thec but anytimg concerning writing code and working on the terminal im
-for it.</p>
+<p>I'm a person who loves Technology,Music,Art programing has been a dream of mine since i was a kid
+im not into the machine side of Tech but anyting concerning writing code and working on the terminal im
+up for it.</p>
 <p id="EDU">Education</p>
 <ul class="SDA">
 	<li><b>Seventh Day Adventist</b></li>
