--- a/Bio.html
+++ b/Bio.html
@@ -9,7 +9,6 @@
 </head>
 <body>
 <h1 id="name">Lehakoe Makgoane</h1>
-<button>hhm</button>
 <h2 id="Interests">Interests</h2>
 <ul class="list">
 	<li>Music</li>
@@ -25,7 +24,7 @@
 <h2 id="Skills">Tech Skills</h2>
 <ul class="Tech">
 	<li>Css</li>
-	<li>GITHB</li>
+	<li>GITHUB</li>
 	<li>Git</li>
 	<li>HTML</li>
 	<li>Ionic</li>
