--- a/Bio.html
+++ b/Bio.html
@@ -29,6 +29,7 @@
 	<li>HTML</li>
 	<li>Ionic</li>
 	<li>jQuery</li>
+	<li>Javascript</li>
 	<li>Wordpress</li>
 </ul>
 <h2 id="about_me">Summary</h2>
