--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1 id="logo">Lehakoe Makgoane</h1>
-<p id="brief">Junior Web developer & Programmer</p>
+<p id="brief">Junior Web Developer & Programmer</p>
 <a href="Bio.html"><button class="horizontal-flip-hover" data-back="Bio" data-front="➕"></button></a>
 </body>
 </html>
