--- a/Bio.html
+++ b/Bio.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <h1 id="name">Lehakoe Makgoane</h1>
+<img src="">
 <h2 id="Interests">Interests</h2>
 <ul class="list">
 	<li>Music</li>
@@ -41,24 +42,24 @@ up for it.</p>
 	<li><b>Seventh Day Adventist</b></li>
 	<li>2007-2013</li>
 	<li>Grade 1- Grade 7</li>
-	<li>Math.A&C,EMS,NS,SS</li>
+	<li>Math,A&C,EMS,NS,SS,Tech,Eng,Vineck,L.o</li>
 </ul>
 <ul class="MMP">
 	<li><b>Mbuyisa Makhubu Primary School</b></li>
 	<li>2013-2014</li>
 	<li>Grade 7- Grade 8</li>
-	<li>Math.A&C,EMS,NS,SS</li>
+	<li>Math,A&C,EMS,NS,SS,Tech,Eng,Vineck,L.o</li>
 </ul>
 <ul class="JSS">
 	<li><b>Kwa Ntsikana Junior Senior Secondary</b></li>
 	<li>2014-2015</li>
 	<li>Grade 8- Grade 8</li>
-	<li>Math.A&C,EMS,NS,SS</li>
+	<li>Math,A&C,EMS,NS,SS,Tech,Eng,Vineck,L.o</li>
 </ul>
 <ul class="Learn">
 	<li><b>Quirky 30</b></li>
-	<li>HTML,CSS,WORDPRESS,GIT</li><li>GITHUB,IONIC,jQuery</li>
-	<li>Still Attending</li>
+	<li>HTML,CSS,WORDPRESS,GIT,GITHUB,IONIC,jQuery</li>
+	<li>2016-2017</li>
 </ul>
 <p id="Lingo">Language</p>
 <ul class="lang">
@@ -66,14 +67,21 @@ up for it.</p>
 	<li>Zulu</li>
 	<li>English</li>
 </ul>
+	<p id="Certified">Certificates</p>
+<ul class="images">
+	<li><img src="Images/html_certificate.jpg" height="100" width="150"></li>
+	<li><img src="Images/css_certificate.jpg" height="100" width="150"></li>
+	<li><img src="Images/js_certificate.jpg" height="100" width="150"></li>
+	<li><img src="Images/Jquery_certificate.jpg" height="100" width="150"></li>
+</ul>
 <footer class="foot">
 	<a href="https://www.facebook.com/Lehakoe.xolelwa" target="blank"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-256.png" width="50"></a>
-	<a href="mailto:lehakoe.lee@gmail.com" target="blank"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" width="50"></a>
-	<a href="https://github.com/Leehakoe" target="blank"><img src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png" width="50"></a>
-	<a href="https://www.instagram.com/rel_leehakoe/" target="blank"><img src="https://cdn2.iconfinder.com/data/icons/social-icons-33/128/Instagram-128.png" width="50"></a>
-	<a href="https://twitter.com/Rel_lehakoe" target="blank"><img src="https://vignette4.wikia.nocookie.net/phoebe-and-her-unicorn/images/1/11/Twitter_bird_icon.png/revision/latest?cb=20150530044104" width="50"></a>
-	<a href="https://plus.google.com/114671614329250959694" target="blank"><img src="https://christianoliff.com/img/icons/googleplus.svg" width="50"></a>
-	<a href="https://www.linkedin.com/in/lehakoe-Makgoane" target="blank"><img src="http://files.softicons.com/download/social-media-icons/free-social-media-icons-by-uiconstock/png/512x512/Linkedin-Icon.png" width="50"></a>
+	<a href="mailto:lehakoe.lee@gmail.com" target="blank"><img src="Images/gmail-icon-11.png" width="50"></a>
+	<a href="https://github.com/Leehakoe" target="blank"><img src="Images/github-512.png" width="50"></a>
+	<a href="https://www.instagram.com/rel_leehakoe/" target="blank"><img src="Images/Instagram-128.png" width="50"></a>
+	<a href="https://twitter.com/Rel_lehakoe" target="blank"><img src="Images/Twitter_bird_icon.png" width="50"></a>
+	<a href="https://plus.google.com/114671614329250959694" target="blank"><img src="Images/google_plus.png" width="60" height="60"></a>
+	<a href="https://www.linkedin.com/in/lehakoe-Makgoane" target="blank"><img src="Images/Linkedin-Icon.png" width="50"></a>
 </footer>
 </body>
 </html>
