--- a/Bio.html
+++ b/Bio.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="name">Lehakoe Makgoane</h1>
-        <img src="" alt="Profile Picture">
-        <h2 id="Interests">Interests</h2>
-        <ul class="list">
+        <h1 id="name" class="text-center mb-5">Lehakoe Makgoane</h1>
+        <img src="" alt="Profile Picture" class="img-fluid mb-5">
+        <h2 id="Interests" class="mb-3">Interests</h2>
+        <ul class="list-unstyled mb-5">
             <li>Music</li>
             <li>Gaming</li>
             <li>Movies</li>
@@ -23,8 +23,8 @@
             <li>Art</li>
         </ul>
 
-        <h2 id="Skills">Tech Skills</h2>
-        <ul class="Tech">
+        <h2 id="Skills" class="mb-3">Tech Skills</h2>
+        <ul class="list-unstyled mb-5">
             <li>CSS</li>
             <li>GITHUB</li>
             <li>Git</li>
@@ -35,30 +35,30 @@
             <li>Wordpress</li>
         </ul>
 
-        <h2 id="about_me">Summary</h2>
-        <p>I'm a person who loves Technology, Music, Art. Programming has been a dream of mine since I was a kid. I'm not into the hardware side of Tech, but anything concerning writing code and working on the terminal, I'm up for it.</p>
+        <h2 id="about_me" class="mb-3">Summary</h2>
+        <p class="mb-5">I'm a person who loves Technology, Music, Art. Programming has been a dream of mine since I was a kid. I'm not into the hardware side of Tech, but anything concerning writing code and working on the terminal, I'm up for it.</p>
 
-        <p id="EDU">Education</p>
-        <ul class="education">
+        <p id="EDU" class="mb-3">Education</p>
+        <ul class="education mb-5">
             <li><b>Seventh Day Adventist</b><br>2007-2013<br>Grade 1- Grade 7<br>Math, A&C, EMS, NS, SS, Tech, Eng, Vineck, L.O</li>
             <li><b>Mbuyisa Makhubu Primary School</b><br>2013-2014<br>Grade 7- Grade 8<br>Math, A&C, EMS, NS, SS, Tech, Eng, Vineck, L.O</li>
             <li><b>Kwa Ntsikana Junior Senior Secondary</b><br>2014-2015<br>Grade 8- Grade 8<br>Math, A&C, EMS, NS, SS, Tech, Eng, Vineck, L.O</li>
             <li><b>Quirky 30</b><br>2016-2017<br>HTML, CSS, WORDPRESS, GIT, GITHUB, IONIC, jQuery</li>
         </ul>
 
-        <p id="Lingo">Language</p>
-        <ul class="languages">
+        <p id="Lingo" class="mb-3">Language</p>
+        <ul class="lang mb-5">
             <li>Sesotho</li>
             <li>Zulu</li>
             <li>English</li>
         </ul>
 
-        <p id="Certified">Certificates</p>
-        <ul class="certificates">
-            <li><img src="Images/html_certificate.jpg" alt="HTML Certificate" height="100" width="150"></li>
-            <li><img src="Images/css_certificate.jpg" alt="CSS Certificate" height="100" width="150"></li>
-            <li><img src="Images/js_certificate.jpg" alt="JavaScript Certificate" height="100" width="150"></li>
-            <li><img src="Images/Jquery_certificate.jpg" alt="jQuery Certificate" height="100" width="150"></li>
+        <p id="Certified" class="mb-3">Certificates</p>
+        <ul class="certificates list-inline mb-5">
+            <li class="list-inline-item"><img src="Images/html_certificate.jpg" alt="HTML Certificate" height="100" width="150"></li>
+            <li class="list-inline-item"><img src="Images/css_certificate.jpg" alt="CSS Certificate" height="100" width="150"></li>
+            <li class="list-inline-item"><img src="Images/js_certificate.jpg" alt="JavaScript Certificate" height="100" width="150"></li>
+            <li class="list-inline-item"><img src="Images/Jquery_certificate.jpg" alt="jQuery Certificate" height="100" width="150"></li>
         </ul>
     </div>
 
